--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{%block title%}  {% endblock %} </title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
   </head>
   <style>
@@ -39,7 +40,7 @@
                 <a class="nav-link {{is_active('/#/')}}" href="/ventas/">Ventas</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link {{is_active('/#/')}}" href="/Configuracon/">Ventas</a>
+                <a class="nav-link {{is_active('/#/')}}" href="/configNeg/">Ventas</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link {{is_active('/#/')}}" href="/historial/">Ventas</a>
