--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{%block title%}  {% endblock %} </title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
   </head>
   <style>
@@ -22,37 +22,37 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link {{is_active('/#/')}}" aria-current="page" href="/usuarios/">Usuarios</a>
+                <a class="nav-link " aria-current="page" href="#">Usuarios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link {{is_active('/#/')}}" href="/clientes/">Clientes</a>
+                <a class="nav-link " href="#">Clientes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link {{is_active('/#/')}}" href="/productos/">Productos</a>
+                <a class="nav-link " href="#">Productos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link {{is_active('/#/')}}" href="/ventas/">Ventas</a>
+                <a class="nav-link " href="#">Ventas</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link {{is_active('/#/')}}" href="/ventas/">Ventas</a>
+                <a class="nav-link " href="#">Reservas</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link {{is_active('/#/')}}" href="/ventas/">Ventas</a>
+                <a class="nav-link " href="#">Horarios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link {{is_active('/#/')}}" href="/configNeg/">Ventas</a>
+                <a class="nav-link {{is_active('/configNeg/')}}" href="/configNeg/">Configuracion</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link {{is_active('/#/')}}" href="/historial/">Ventas</a>
+                <a class="nav-link {{is_active('/historial/')}}" href="/historial/">Historial</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link {{is_active('/#/')}}" href="/notificaciones/">Ventas</a>
+                <a class="nav-link " href="/notificaciones/">Notificaciones</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link {{is_active('/#/')}}" href="/servicios/">Ventas</a>
+                <a class="nav-link " href="/servicios/">Servicios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link {{is_active('/')}}" href="/">Salir</a>
+                <a class="nav-link " href="/">Salir</a>
               </li>
             </ul>
           </div>
