--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
                 <a class="nav-link {{is_active('/historial/')}}" href="/historial/">Historial</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="/notificaciones/">Notificaciones</a>
+                <a class="nav-link {{is_active('/notificaciones/')}}" href="/notificaciones/">Notificaciones</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link " href="/servicios/">Servicios</a>
