--- a/templates/historial/index.html
+++ b/templates/historial/index.html
@@ -2,7 +2,7 @@
 {%block title%}HISTORIAL{%endblock%}
 
 {%block content%}
-<h1>HISTORIAL</h1>
+<h1 class="text-center mb-4" style="color: #f0c93d;">📋 HISTORIAL</h1>
 
 <table class="table table-dark table-hover" >
     <tr>
@@ -30,7 +30,7 @@
     </tr>
     {%else%}
     <tr>
-        <td colspan="8px">No se han registrado nada en el historial de actividades</td>
+        <td colspan="8px" class="text-center">⚠️ No se han registrado nada en el historial de actividades</td>
     </tr>
     {%endfor%}
 </table>
