--- a/templates/base.html
+++ b/templates/base.html
@@ -31,13 +31,13 @@
                 <a class="nav-link " href="#">Productos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="#">Ventas</a>
+                <a class="nav-link {{is_active('/personal/')}}" href="/personal/">Personal</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="#">Reservas</a>
+                <a class="nav-link {{is_active('/reserva/')}}" href="/reserva/">Reservas</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="#">Horarios</a>
+                <a class="nav-link {{is_active('/horarios/')}}" href="/horarios/">Horarios</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link {{is_active('/configNeg/')}}" href="/configNeg/">Configuracion</a>
@@ -49,7 +49,7 @@
                 <a class="nav-link {{is_active('/notificaciones/')}}" href="/notificaciones/">Notificaciones</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="/servicios/">Servicios</a>
+                <a class="nav-link {{is_active('/servicios/')}}" href="/servicios/">Servicios</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link " href="/">Salir</a>
@@ -59,7 +59,7 @@
         </div>
       </nav>
     
-    <div class="container">  
+    <div class="container mt-5" style="background-color: #1e1e1e; padding: 25px; border-radius: 10px; color: white;">  
       {% block content %}
   
       {% endblock %}
