--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,10 @@
                 <a class="nav-link " href="#">Clientes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="#">Productos</a>
+                <a class="nav-link " href="#">Recursos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link " href="#">Horarios Disponibles</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link {{is_active('/personal/')}}" href="/personal/">Personal</a>
