--- a/templates/base.html
+++ b/templates/base.html
@@ -4,58 +4,53 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{%block title%}  {% endblock %} </title>
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"> -->
+    <link rel="stylesheet" href="{{url_for('static',filename='styles/styles_base.css')}}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
   </head>
-  <style>
-    body{
-        background-color: rgb(214, 199, 67);
-    }
-  </style>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">VENTAS</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="nav justify-content-center" >
               <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="#">Usuarios</a>
+                <a class="nav-link {{is_active('/usuarios/')}}"  href="/usuarios/" ><strong>Usuarios</strong> </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="#">Clientes</a>
+                <a class="nav-link " href="#"><strong>Clientes</strong> </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="#">Recursos</a>
+                <a class="nav-link " href="#"><strong>Recursos</strong> </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="#">Horarios Disponibles</a>
+                <a class="nav-link " href="#"><strong>Horarios Disponibles</strong>  </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link {{is_active('/personal/')}}" href="/personal/">Personal</a>
+                <a class="nav-link {{is_active('/personal/')}}" href="/personal/"><strong>Personal</strong> </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link {{is_active('/reserva/')}}" href="/reserva/">Reservas</a>
+                <a class="nav-link {{is_active('/reserva/')}}" href="/reserva/"><strong>Reservas</strong> </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link {{is_active('/horarios/')}}" href="/horarios/">Horarios</a>
+                <a class="nav-link {{is_active('/horarios/')}}" href="/horarios/"><strong>Horarios</strong> </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link {{is_active('/configNeg/')}}" href="/configNeg/">Configuracion</a>
+                <a class="nav-link {{is_active('/configNeg/')}}" href="/configNeg/"><strong>Configuracion</strong> </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link {{is_active('/historial/')}}" href="/historial/">Historial</a>
+                <a class="nav-link {{is_active('/historial/')}}" href="/historial/"><strong>Historial</strong> </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link {{is_active('/notificaciones/')}}" href="/notificaciones/">Notificaciones</a>
+                <a class="nav-link {{is_active('/notificaciones/')}}" href="/notificaciones/"><strong>Notificaciones</strong> </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link {{is_active('/servicios/')}}" href="/servicios/">Servicios</a>
+                <a class="nav-link {{is_active('/servicios/')}}" href="/servicios/"><strong>Servicios</strong> </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="/">Salir</a>
+                <a class="nav-link " href="/"><strong>Salir</strong> </a>
               </li>
             </ul>
           </div>
