--- a/templates/base.html
+++ b/templates/base.html
@@ -20,13 +20,13 @@
                 <a class="nav-link {{is_active('/usuarios/')}}"  href="/usuarios/" ><strong>Usuarios</strong> </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="#"><strong>Clientes</strong> </a>
+                <a class="nav-link {{is_active('/clientes/')}}" href="/clientes/"><strong>Clientes</strong> </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="#"><strong>Recursos</strong> </a>
+                <a class="nav-link {{is_active('/recursos/')}}" href="/recursos/"><strong>Recursos</strong> </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="#"><strong>Horarios Disponibles</strong>  </a>
+                <a class="nav-link {{is_active('/horariosDisponibles/')}}" href="/horariosDisponibles/"><strong>Horarios Disponibles</strong>  </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link {{is_active('/personal/')}}" href="/personal/"><strong>Personal</strong> </a>
