--- a/templates/configNeg/index.html
+++ b/templates/configNeg/index.html
@@ -20,10 +20,10 @@
         <td>config.nombreparametro</td>
         <td>config.valorparametro</td>
         <td>
-            <a href="{{url_for('configuracion.edit')}}" class="btn btn-warning">Editar</a>
+            <a href="{{url_for('configuracion.edit',id=config.id)}}" class="btn btn-warning">Editar</a>
         </td>
         <td>
-            <a href="{{url_for('configuracion.delete')}}" class="btn btn-danger">Eliminar</a>
+            <a href="{{url_for('configuracion.delete',id=config.id)}}" class="btn btn-danger">Eliminar</a>
         </td>
     </tr>
     {%else%}
