--- a/templates/personal/edit.html
+++ b/templates/personal/edit.html
@@ -15,7 +15,7 @@
         </div>
         <div class="mb-3">
             <label class="form-label">Email</label>
-            <input type="email" class="form-control" name="Email" value="{{ personal.Email }}" required>
+            <input type="email" class="form-control" name="email" value="{{ personal.email }}" required>
         </div>
         <div class="mb-3">
             <label class="form-label">Teléfono</label>
@@ -23,7 +23,7 @@
         </div>
         <div class="mb-3">
             <label class="form-label">Rol</label>
-            <input type="text" class="form-control" name="Rol" value="{{ personal.Rol }}" required>
+            <input type="text" class="form-control" name="rol" value="{{ personal.rol }}" required>
         </div>
         <div class="text-center">
             <button type="submit" class="btn btn-primary">ACTUALIZAR</button>
